--- a/files/loader.html
+++ b/files/loader.html
@@ -1,7 +1,7 @@
 <!--
--- Author bt0r
--- Twitch : twitch.tv/bt0r
--- Twitter : twitter.com/biiitor
+ Author bt0r
+ Twitch : twitch.tv/bt0r
+ Twitter : twitter.com/biiitor
 -->
 <!DOCTYPE html>
 <html lang="en">
